--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.0.0-rc.3",
-    "apollo-server-express": "^1.3.6",
+    "apollo-server-express": "^2.0.0-rc.5",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "graphql": "^0.13.2"
+    "graphql": "^0.13.2",
+    "jsonwebtoken": "^8.3.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   }
 }
