--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "apollo-server": "^2.0.0-rc.3",
     "apollo-server-express": "^2.0.0-rc.5",
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "jsonwebtoken": "^8.3.0",
+    "merge-graphql-schemas": "^1.5.2",
+    "mongoose": "^5.1.7",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
   }
