--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^1.1.0",
     "antd": "^3.6.4",
     "apollo-boost": "^0.1.10",
+    "apollo-link-state": "^0.4.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "install": "^0.12.1",
