--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,13 @@
     "@material-ui/icons": "^1.1.0",
     "antd": "^3.6.4",
     "apollo-boost": "^0.1.10",
+    "apollo-link": "^1.2.2",
+    "apollo-link-context": "^1.0.8",
     "apollo-link-state": "^0.4.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "install": "^0.12.1",
+    "moment": "^2.22.2",
     "npm": "^6.1.0",
     "react": "^16.4.1",
     "react-apollo": "^2.1.8",
