--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "apollo-link": "^1.2.2",
     "apollo-link-context": "^1.0.8",
     "apollo-link-state": "^0.4.1",
+    "apollo-link-ws": "^1.0.8",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "install": "^0.12.1",
