--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
+    "graphql-tools": "^3.0.5",
     "jsonwebtoken": "^8.3.0",
     "merge-graphql-schemas": "^1.5.2",
     "mongoose": "^5.1.7",
