--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
+    "all": "concurrently \"npm start\" \"cd ./client && yarn start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
